// Vitest Snapshot v1

exports[`<Skeleton /> > should render default skeleton as 1 line paragraph 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuetext="loading"
  class="c-lfOXhj c-lfOXhj-hGdOCN-animated-true"
  role="progressbar"
>
  <div
    class="c-cRMbGV"
  >
    <div
      class="c-fCqUlT"
      style="width: 45%;"
    >
      <p
        class="c-iPYhUp c-kLRYwF c-hAVAWC c-iPYhUp-iiODFRR-css"
      />
    </div>
  </div>
</div>
`;

exports[`<Skeleton /> > should render default skeleton as 2 line texts 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuetext="loading"
  class="c-lfOXhj c-lfOXhj-hGdOCN-animated-true"
  role="progressbar"
>
  <div
    class="c-cRMbGV"
  >
    <div
      class="c-fCqUlT"
      style="width: 45%;"
    >
      <p
        class="c-iPYhUp c-kLRYwF c-hAVAWC c-iPYhUp-iiODFRR-css"
      />
    </div>
    <div
      class="c-fCqUlT"
      style="width: 20%;"
    >
      <p
        class="c-iPYhUp c-kLRYwF c-hAVAWC c-iPYhUp-iiODFRR-css"
      />
    </div>
  </div>
</div>
`;

exports[`<Skeleton /> > should render default skeleton as Single image 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuetext="loading"
  class="c-lfOXhj c-lfOXhj-hGdOCN-animated-true"
  role="progressbar"
>
  <div
    class="c-dbbEBI c-dbbEBI-iiODFRR-css"
    data-testid="skeleton-img"
  />
</div>
`;

exports[`<Skeleton /> > should render default skeleton as item card with image 1`] = `
<div
  aria-busy="true"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuetext="loading"
  class="c-lfOXhj c-lfOXhj-hGdOCN-animated-true"
  role="progressbar"
>
  <div
    class="c-dbbEBI c-dbbEBI-iiODFRR-css"
    data-testid="skeleton-img"
  />
  <div
    class="c-cRMbGV"
  >
    <div
      class="c-fCqUlT"
      style="width: 45%;"
    >
      <p
        class="c-iPYhUp c-kLRYwF c-hAVAWC c-iPYhUp-iiODFRR-css"
      />
    </div>
    <div
      class="c-fCqUlT"
      style="width: 20%;"
    >
      <p
        class="c-iPYhUp c-kLRYwF c-hAVAWC c-iPYhUp-iiODFRR-css"
      />
    </div>
  </div>
</div>
`;
